<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="widget_balance_default">Rp 0</string>
    <string name="widget_income_default">Rp 0</string>
    <string name="widget_expense_default">Rp 0</string>
    <string name="widget_month_default">Bulan ini</string>
    <string name="widget_balance_label">Total saldo</string>
    <string name="widget_income_label">Pemasukan</string>
    <string name="widget_expense_label">Pengeluaran</string>
    <string name="widget_income_label_short">Masuk</string>
    <string name="widget_expense_label_short">Keluar</string>
    <string name="widget_quick_add">+ Transaksi</string>
    <string name="widget_history">Riwayat</string>
    <string name="widget_top_spending">Pengeluaran Teratas</string>
</resources>
